# meeting-transcriber

./: .env.example  .gitignore  README.md  audio_utils.py  diarizer.py  output_formats.py  pyproject.toml  server.py  stt_engine.py  transcribe.py
.qoder/repowiki/en/content/: Audio Processing Module.md  Command-Line Interface.md  Configuration and Tuning.md  Development Guide.md  HTTP API Server.md  Installation and Setup.md  Quick Start Guide.md  Speaker Diarization System.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Advanced Algorithms.md  Audio Processing Utilities.md  CLI Interface.md  HTTP API Server.md  Output Generation System.md  Speaker Diarization System.md  Speech Recognition Engine.md
.qoder/repowiki/en/content/Advanced Features/: Advanced Features.md  CTC Alignment Algorithms.md  Custom Model Integration.md  Custom Processing Pipelines.md
.qoder/repowiki/en/content/Core Architecture/: Component Interactions.md  Core Architecture.md  Design Patterns.md  Pipeline Architecture.md  System Boundaries.md
.qoder/repowiki/en/content/Output Generation System/: Output Generation System.md  Output Persistence and Management.md  Plain Text Format.md  SRT Subtitle Format.md  Structured JSON Format.md  WebVTT Format.md
.qoder/repowiki/en/content/Project Overview/: Architecture Overview.md  Installation & Setup.md  Introduction.md  Key Features.md  Project Overview.md  Quick Start Guide.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
.qoder/repowiki/knowledge/en/: _index.yaml
(+11 files in other folders)
